--- a/crossword/test/tester.html
+++ b/crossword/test/tester.html
@@ -12,12 +12,12 @@ log(board.width + "," + board.height);
 log(board.symmetry);
 log(board.cells.length);
 log(board.cells[0].length);
-var cell = board.get(2, 5);
+var cell = board.getCell(2, 5);
 log(cell);
 var sym = board.getSym(2, 5);
 log(sym);
-cell = board.get(2, 5);
-board.set(2, 5, 'H');
+cell = board.getCell(2, 5);
+board.setCell(2, 5, 'H');
 log(cell);
 board.toggle(2, 5);
 log(cell);
@@ -25,9 +25,9 @@ log(sym);
 board.toggle(2, 5);
 log(cell);
 log(sym);
-board.set(2, 5, 'REBUS', Board.Cell.FILL.CIRCLE);
+board.setCell(2, 5, 'REBUS', Board.Cell.FILL.CIRCLE);
 log(cell);
-board.set(2, 5, 'A', Board.Cell.FILL.CIRCLE);
+board.setCell(2, 5, 'A', Board.Cell.FILL.CIRCLE);
 loggg('all', () => {
   board.cells.all(cell => log(cell));  
 })
@@ -55,15 +55,18 @@ loggg('refresh, sel', () => {
 })
 cells = board.getSel();
 loggg('getSel', () => log(cells));
+out('getSel');
 var line = board.cells.line(5, 2, -1);
 log(line);
 log(line.words, 'words');
-board.toggle(5, 4);
-board.toggle(5, 10);
+board.toggleCell(5, 4);
+out('toggle 5,4');
+board.toggleCell(5, 10);
+out('toggle 5,10');
 var line = board.cells.line(5, 2, -1);
 log(line);
 log(line.words, 'words after toggle');
-board.toggle(1, 1);
+board.toggleCell(1, 1);
 var line = board.cells.line(0, 1, 1);
 log(line);
 log(line.words);
@@ -71,40 +74,40 @@ loggg('all', () => {
   board.cells.all(cell => log(cell));  
 })
 out('toString');
-board.uiDown(1);
+board.goDown(1);
 out('down(1)');
-board.uiDown(1);
+board.goDown(1);
 out('down(1)');
-board.uiDown(1);
+board.goDown(1);
 out('down(1)');
-board.uiRight(1);
+board.goRight(1);
 out('right(1)');
-board.uiRight(1);
+board.goRight(1);
 out('right(1)');
-board.uiRight(1);
+board.goRight(1);
 out('right(1)');
-board.uiRight(1);
+board.goRight(1);
 out('right(1)');
-board.uiSelWord();
+board.selWord();
 out('selWord');
-board.uiSet('W');
+board.set('W');
 out('set');
-board.uiMoveTo(1, 2);
+board.moveTo(1, 2);
 out('moveto 1,2');
-board.uiRight(1);
-board.uiRight(1);
-out('uiright x2');
-board.uiToggle();
+board.goRight(1);
+board.goRight(1);
+out('goright x2');
+board.toggle();
 out('toggle');
-board.uiRight();
-out('uiright');
-board.uiToggle();
+board.goRight();
+out('goright');
+board.toggle();
 out('toggle');
-board.uiRight();
-board.uiSelWord();
+board.goRight();
+board.selWord();
 out('selword');
-board.uiToggleLock();
+board.toggleLock();
 out('togglelock');
-board.uiDown();
+board.goDown();
 out('down');
 </script>
