--- a/crossword/crossword.html
+++ b/crossword/crossword.html
@@ -16,7 +16,6 @@ BODY {
 }
 #grid {
   border-spacing:0;
-  border-collapse:collapse;
   border:1px solid #666;
 }
 #grid TD {
@@ -30,6 +29,7 @@ BODY {
   font-size:26px;
   line-height:26px;
   text-align:center;
+  cursor:pointer;
 }
 #grid TD SPAN {
   font-family:'Calibri';
@@ -73,15 +73,17 @@ BODY {
 }
 #cursor {
   position:absolute;
-  top:24;
-  left:24;
+  top:25;
+  left:25;
   animation-name:cursor;
   animation-duration:0.5s;
   animation-iteration-count:infinite;
+}
+#cursor.tran {
   transition:transform 0.1s linear;
 }
 #cursor.h {
-  height:37px;
+  height:36px;
   width:43px;
   border-top:3px solid green;
   border-bottom:3px solid green;
@@ -91,9 +93,6 @@ BODY {
   width:38px;
   border-left:3px solid green;
   border-right:3px solid green;
-}
-#cursor:hover {
-  transform:translate3d(40px, 0px, 0px);
 }
 @keyframes cursor {
   0% {border-color:rgb(0, 81, 255);}
