--- a/yordle/yordle.html
+++ b/yordle/yordle.html
@@ -40,7 +40,7 @@ header {
   text-align:center;
   cursor:pointer;
 }
-.c1 {
+.c1, .eb {
   background-color:#3a3a3c !important;
 }
 .c2 {
@@ -48,6 +48,13 @@ header {
 }
 .c3 {
   background-color:#538d4e !important;
+}
+.win {
+  background-color:#538d4e;
+  animation:blink 0.2s 5;
+}
+@keyframes blink {
+  50% {background-color:black};
 }
 #board {
   text-align:center;
@@ -115,7 +122,7 @@ header {
         <button>l</button>
       </div>
       <div class='last'>
-        <button>enter</button>
+        <button class='eb'>enter</button>
         <button>z</button>
         <button>x</button>
         <button>c</button>
@@ -123,7 +130,7 @@ header {
         <button>b</button>
         <button>n</button>
         <button>m</button>
-        <button class='bs'>⌫</button>
+        <button class='eb bs'>⌫</button>
       </div>
     </div>
   </div>
