--- a/yordle/yordle.html
+++ b/yordle/yordle.html
@@ -165,5 +165,5 @@ header {
   </div>
 </body>
 <script>
-  window.on('DOMContentLoaded', () => new UiPage());
+  window.on('DOMContentLoaded', () => new UiPage(1));
 </script>
