More AI updates

--- a/yordle/yordle.html
+++ b/yordle/yordle.html
@@ -1,9 +1,10 @@
 <html>
 <head>
-  <script type='text/javascript' src='words.js?1'></script>
-  <script type='text/javascript' src='yordle.js?1'></script>
-  <script type='text/javascript' src='yordleui.js?1'></script>
-  <script type='text/javascript' src='yordleai.js?1'></script>
+  <script type='text/javascript' src='ui.js?3'></script>
+  <script type='text/javascript' src='words.js?3'></script>
+  <script type='text/javascript' src='yordle.js?3'></script>
+  <script type='text/javascript' src='yordleui.js?3'></script>
+  <script type='text/javascript' src='yordleai.js?3'></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
