--- a/yordle/tests/tester2.html
+++ b/yordle/tests/tester2.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-  <script type='text/javascript' src='words.js?1'></script>
-  <script type='text/javascript' src='yordle.js?1'></script>
-  <script type='text/javascript' src='yordleai.js?1'></script>
+  <script type='text/javascript' src='../words.js?1'></script>
+  <script type='text/javascript' src='../yordle.js?1'></script>
+  <script type='text/javascript' src='../yordleai.js?1'></script>
 </head>
 <body>
 </body>
