--- a/yordle/tests/ai.html
+++ b/yordle/tests/ai.html
@@ -89,7 +89,7 @@ header {
           <td></td>
         </tr>
       </table>
-      <div class='title'>TRIES</div>
+      <div class='title'># TRIES TO WIN</div>
       <table>
         <tr id='average'>
           <th>average</th>
