--- a/yordle/yordle.html
+++ b/yordle/yordle.html
@@ -125,7 +125,8 @@ header {
     <table id='grid'></table>
     <div id='ai'>
       <button>ok !</button>
-      <button>redo</button>
+      <button>not in wordlist</button>
+      <button>undo</button>
     </div>
     <div id='keyboard'>
       <div>
