--- a/crossword/crossword.html
+++ b/crossword/crossword.html
@@ -1,8 +1,10 @@
 <html>
 <head>
-  <script type='text/javascript' src='../lcd-core.js?1'></script>
-  <script type='text/javascript' src='data/crossword.js?1'></script>
-  <script type='text/javascript' src='ui/editor.js?1'></script>
+  <script type='text/javascript' src='lib/lcd-simple.js?2'></script>
+  <script type='text/javascript' src='lib/lcd-db.js?2'></script>
+  <script type='text/javascript' src='crossword.js?2'></script>
+  <script type='text/javascript' src='ui/editor.js?2'></script>
+  <script type='text/javascript' src='server/server.js?2'></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
@@ -11,8 +13,32 @@ BODY {
   margin:0;
   background-color:#000;
 }
+.rc {
+  background-color:#333;
+  padding:10px;
+  display:inline-block;
+  border:1px solid #666;
+}
 #editor {
-  margin:1em;
+  height:100%;
+}
+.body {
+  padding:1em;
+  display:flex;
+  height:90%;
+}
+.body .tile {
+  flex:1;
+}
+.body .tile2 {
+  flex-grow:2;
+  padding-left:1em;
+}
+.tile2 #if {
+  width:100%;
+  height:100%;
+  border:0;
+  zoom:80%;
 }
 #grid {
   border-spacing:0;
@@ -21,10 +47,11 @@ BODY {
 #grid TD {
   border:1px solid #666;
   background-color:#111;
-  color:#bbb;
+  color:#eee;
   padding:8px 0 0 0;
   height:36px;
   width:36px;
+  min-width:36px;
   font-family:'Roboto', sans-serif;
   font-size:26px;
   line-height:26px;
@@ -49,13 +76,14 @@ BODY {
   background-image: radial-gradient(35px circle, #666 50%, transparent 55%);
 }
 #grid TD.err {
-  background-color:rgb(65, 23, 23);
+  background-color:rgb(197, 0, 0);
+  border-color:rgb(197, 0, 0);
 }
 #grid TD.lock {
   color:white;
   background-image: linear-gradient(45deg, #666666 10%, #111111 10%, #111111 50%, #666666 50%, #666666 60%, #111111 60%, #111111 100%);
   background-size: 7.07px 7.07px;
-}
+}                                                   
 #grid TD.sel {
   background-color:darkcyan;
 }
@@ -99,20 +127,21 @@ BODY {
   50% {border-color:orange;}
   100% {border-color:rgb(0, 81, 255);}
 }
-.rc {
-  background-color:#333;
-  padding:10px;
-  display:inline-block;
-  border:1px solid #666;
-}
 </style>
 </head>
 <body>
   <div id='cursor' class='v'></div>
   <div id='editor'>
-    <div class='rc'>
-      <table id='grid'>
-      </table>
+    <div class='body'>
+      <div class='tile'>
+        <div class='rc'>
+          <table id='grid'>
+          </table>
+        </div>
+      </div>
+      <div class='tile2'>
+        <iframe id='if'></iframe>
+      </div>
     </div>
   </div>
 </body>
