--- a/aircontroller/aircontroller.html
+++ b/aircontroller/aircontroller.html
@@ -4,8 +4,8 @@
   <script type='text/javascript' src='aircontroller.js'></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
-  <style>
+  <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
+<style>
 body {
   margin:0;
   padding:0;
@@ -13,7 +13,7 @@ body {
   overflow:hidden;
 }
 #radar {
-  background-color:rgb(65, 112, 65);
+  background-color:rgb(71, 122, 71);
   flex:1;
   background-image:linear-gradient(
       45deg,
@@ -61,13 +61,13 @@ body {
     transform:scale(1.5) rotate(1turn);
   }
   1% {
-    transform:scale(1.4) rotate(1turn);
+    transform:scale(1.5) rotate(1turn);
   }
   2% {
-    transform:scale(1.3) rotate(1turn);
+    transform:scale(1.5) rotate(1turn);
   }
   20% {
-    transform:scale(1.2) rotate(0turn);
+    transform:scale(1) rotate(0turn);
   }
   100% {
     transform:scale(0) rotate(1turn);
@@ -115,20 +115,121 @@ body {
 #score {
   margin:5px 0 0 15px;
   display:inline-block;
-  font-family:'Bangers';
-  font-size:50pt;
+  font-family:'Fredoka One';
+  font-size:40pt;
   color:white;
 }
 #score span {
   display:inline-block;
-  padding-left:10px;
+  padding-left:20px;
 }
-  </style>
+.runb {
+  background-color:rgb(94, 76, 48);
+  width:116px;
+  position:absolute;
+  border-radius:20px;
+  box-shadow:0 0 2px 4px rgb(94, 76, 48);
+  display:flex;
+  flex-direction:column;
+  justify-content:end;
+}
+#jetrunb {
+  height:723px;
+  top:20px;
+  left:800px;
+  transform:rotate(46deg);
+}
+#planerunb {
+  height:558px;
+  top:0px;
+  left:1050px;
+  transform:rotate(-68deg);
+}
+.chevs {
+  height:110px;
+  display:flex;
+  flex-direction:column;
+  justify-content:end;
+}
+.chev {
+  height:37px;
+  width:116px;
+  position:relative;
+}
+#jetrunb .chev .before {
+  background:rgb(255, 125, 0) !important;
+  box-shadow:0 0 2px 5px rgb(255, 125, 0) !important;
+}
+#jetrunb .chev .after {
+  background:rgb(255, 125, 0);
+  box-shadow:0 0 2px 5px rgb(255, 125, 0);
+}
+.chev .before {
+  position:absolute;
+  top:0px;
+  left:20px;
+  height:15px;
+  width:34px;
+  background:rgb(255, 186, 0);
+  box-shadow:0 0 2px 5px rgb(255, 186, 0);
+  transform:skew(0deg, -23deg);
+}
+.chev .after {
+  position:absolute;
+  top:0px;
+  right:20px;
+  height:15px;
+  width:34px;
+  background:rgb(255, 186, 0);
+  box-shadow:0 0 2px 5px rgb(255, 186, 0);
+  transform:skew(0deg, 23deg);
+}
+.run {
+  background-color:rgb(151, 151, 151);
+  position:absolute;
+  border-radius:13px;
+  box-shadow:0 0 2px 4px rgb(151, 151, 151);
+  padding-bottom:15px;
+  margin:12px 12px 110px 12px;
+  width:92px;
+}
+#jetrun {
+  height:598px;
+  top:20px;
+  left:800px;
+  transform:rotate(46deg);
+  transform-origin:47px 351px;
+}
+#planerun {
+  height:433px;
+  top:0px;
+  left:1050px;
+  transform:rotate(-68deg);
+  transform-origin:50% 59.5%;
+}
+.lines {
+  margin:5px;
+  height:100%;
+}
+#planerun .lines {
+  border-left:10px solid rgb(255, 186, 0);
+  border-right:10px solid rgb(255, 186, 0);
+}
+#jetrun .lines {
+  border-left:10px solid rgb(255, 125, 0);
+  border-right:10px solid rgb(255, 125, 0);
+}
+</style>
 </head>
 <body>
+  <!--  -->
   <!-- radar -->
   <div id='radar'>
-    <div id='score'>SCORE:<span>0</span></div>
+    <div id='score'>Score:<span>0</span></div>
+    <div id='planerunb' class='runb'><div id='planepad' class='chevs'><div class='chev'><div class='before'></div><div class='after'></div></div><div class='chev'><div class='before'></div><div class='after'></div></div></div></div>
+    <div id='jetrunb' class='runb'><div id='jetpad' class='chevs'><div class='chev'><div class='before'></div><div class='after'></div></div><div class='chev'><div class='before'></div><div class='after'></div></div></div></div>
+    <div id='planerun' class='run'><div class='lines'></div></div>
+    <div id='jetrun' class='run'><div class='lines'></div></div>
   </div>
   <!-- blueprints -->
   <div class='pow blueprint'>
