--- a/aircontroller/aircontroller.html
+++ b/aircontroller/aircontroller.html
@@ -56,6 +56,16 @@ body {
   transform-origin:70px 70px;
   transform:scale(0);
 }
+@keyframes landing {
+  from {
+    transform:scale(1);
+    opacity:1;
+  }
+  to {
+    transform:scale(0);
+    opacity:0;
+  }
+}
 @keyframes dive {
   0% {
     transform:scale(1.5) rotate(1turn);
@@ -207,6 +217,20 @@ body {
     box-shadow:0 0 2px 5px hsl(29, 100%, 50%);
   }
 }
+.bulge {
+  animation:scorebulge 0.7s ease-in-out 1;
+}
+@keyframes scorebulge {
+  0% {
+    transform:scale(1);
+  }
+  50% {
+    transform:scale(2);
+  }
+  100% {
+    transform:scale(1);
+  }
+}
 .chev .before {
   position:absolute;
   top:0px;
@@ -258,8 +282,8 @@ body {
 }
 .land {
   position:absolute;
-  left:1100px;
-  top:120px;
+  left:725;
+  top:483;
   height:3px;
   width:3px;
   background:red;
