--- a/aircontroller/aircontroller.html
+++ b/aircontroller/aircontroller.html
@@ -42,6 +42,11 @@ body {
   cursor:pointer;
   z-index:10;
 }
+.plane {
+  position:absolute;
+  cursor:pointer;
+  z-index:10;
+}
 .hide {
   display:none !important; 
 }
@@ -56,14 +61,26 @@ body {
   transform-origin:70px 70px;
   transform:scale(0);
 }
-@keyframes landing {
+@keyframes jetlanding {
   from {
-    transform:scale(1);
     opacity:1;
   }
   to {
-    transform:scale(0);
+    height:0;
+    width:0;
     opacity:0;
+    margin-left:65px;
+  }
+}
+@keyframes planelanding {
+  from {
+    opacity:1;
+  }
+  to {
+    height:0;
+    width:0;
+    opacity:0;
+    padding-right:50px;
   }
 }
 @keyframes dive {
@@ -303,6 +320,15 @@ body {
   background:red;
   z-index:999;
 }
+.land2 {
+  position:absolute;
+  left:871;
+  top:183;
+  height:3px;
+  width:3px;
+  background:red;
+  z-index:999;
+}
 </style>
 </head>
 <body>
@@ -344,6 +370,39 @@ body {
       </g>  
     </svg>
   </div>
+  <div class='plane blueprint'>
+    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" version="1.1" id="DESIGNS" x="0px" y="0px" width="54px" height="54px" viewBox="0 0 32 32" style="stroke: black; stroke-width: 0.5; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; enable-background:new 0 0 32 32;" xml:space="preserve">
+      <g>
+        <path class="flatshadows_vier" d="M24,0c-0.379,0-4.466,0.675-7,1.278V0.99C17,0.443,16.557,0,16.01,0H16h-0.01   C15.443,0,15,0.443,15,0.99v0.288C12.466,0.675,8.379,0,8,0C7.448,0,7,0.448,7,1c0,0.552,0.448,1,1,1c0.379,0,15.621,0,16,0   c0.552,0,1-0.448,1-1C25,0.448,24.552,0,24,0z" style="fill: #A3AFAF;"/>
+        <g>
+          <g>
+            <polygon class="flatshadows_twee" points="9,28 9,31 16,31 16,25    " style="stroke: black; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: rgb(199,210,227);"/>
+            <polygon class="flatshadows_twee" points="16,10 0,13 0,21 16,21    " style="fill: rgb(199,210,227);"/>
+          </g>
+          <g>
+            <polygon class="flatshadows_twee" points="9,28 9,31 16,31 16,25    " style="fill: rgb(199,210,227);"/>
+            <polygon class="flatshadows_twee" points="16,10 0,13 0,19 16,19    " style="stroke: black; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill:  rgb(92, 176, 255);"/>
+          </g>
+        </g>
+        <path class="flatshadows_twee" d="M21,7V6c0-2.209-1.791-4-4-4h-2c-2.209,0-4,1.791-4,4v1H21z" style="stroke: black; stroke-width: 0.5; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: rgb(199,210,227);"/>
+        <g>
+          <g>
+            <polygon class="flatshadows_drie" points="16,31 23,31 23,28 16,25    " style="stroke: black; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: rgb(199,210,227);"/>
+            <path class="flatshadows_drie" d="M21,6c0-2.209-1.791-4-4-4h-1v5h5V6z" style="fill: rgb(199,210,227);"/>
+            <polygon class="flatshadows_drie" points="16,10 16,21 32,21 32,13    " style="fill: rgb(199,210,227);"/>
+          </g>
+          <g>
+            <polygon class="flatshadows_drie" points="16,31 23,31 23,28 16,25    " style="fill: rgb(199,210,227);"/>
+            <path class="flatshadows_drie" d="M21,6c0-2.209-1.791-4-4-4h-1v5h5V6z" style="fill: rgb(199,210,227);stroke: black; stroke-width: 0.5; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10;"/>
+            <polygon class="flatshadows_drie" points="16,10 16,19 32,19 32,13    " style="fill: rgb(92, 176, 255);stroke: black; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; "/>
+          </g>
+        </g>
+        <path class="flatshadows_vijf" d="M24,0c-0.379,0-4.466,0.675-7,1.278V0.99C17,0.443,16.557,0,16.01,0H16v2h1V1.992   C19.534,1.995,23.621,2,24,2c0.552,0,1-0.448,1-1C25,0.448,24.552,0,24,0z" style="fill: #8D9999;"/>
+        <polygon class="flatshadows_een" points="11,7 13,26 15,32 17,32 19,26 21,7  " style="stroke: black; stroke-width: 0.5; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: black;"/>
+        <polygon class="flatshadows_twee" points="16,32 17,32 19,26 21,7 16,7  " style="stroke: black; stroke-width: 0.5; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill:black;"/>
+      </g>
+    </svg>      
+  </div>  
 </body>
 <script>
 window.on('DOMContentLoaded', () => radar = new Radar());
